fix: add content-visibility: auto on footer to prevent scroll to top on load caused by iframe

--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,7 @@ section > h2 {
 } 
 
 .contacto {
+  content-visibility: auto;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
